# ostep-pdf-downloader

./: README.md  pyproject.toml
ostep_pdf_downloader/: __init__.py  test.py  utils.py
ostep_pdf_scraper/: __init__.py  test.py
