[project]
name = "ostep-pdf-downloader"
version = "0.1.0"
description = "Scrape and merge the OSTEP book into a PDF with embedded table of content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pymupdf>=1.25.1",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.11",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "ostep_pdf_downloader:main"

[tool.pytest.ini_options]
python_files = ["*.py"]
python_functions = "test_*"
# Show logs in pytest stdout.
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
